--- a/timer/timer.vcxproj
+++ b/timer/timer.vcxproj
@@ -19,9 +19,9 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{62D05114-9CAE-4364-9294-64DB6B8A06F3}</ProjectGuid>
+    <ProjectGuid>{CCA1628B-015C-4156-ABBA-26AF7AE026CA}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>goal</RootNamespace>
+    <RootNamespace>timer</RootNamespace>
     <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -146,7 +146,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="goal.cpp" />
+    <ClInclude Include="timer.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="test.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
