--- a/amicable_number/amicable_number.vcxproj
+++ b/amicable_number/amicable_number.vcxproj
@@ -19,9 +19,9 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{62D05114-9CAE-4364-9294-64DB6B8A06F3}</ProjectGuid>
+    <ProjectGuid>{DE6E6142-07F1-41DF-AF7E-2678EF93E40D}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>goal</RootNamespace>
+    <RootNamespace>amicable_number</RootNamespace>
     <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -146,7 +146,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="goal.cpp" />
+    <ClCompile Include="amicable_number.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
