好像不需要读写其他字段

--- a/src/misc/驾考/驾考.vcxproj
+++ b/src/misc/驾考/驾考.vcxproj
@@ -145,8 +145,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="准驾车型.h" />
-    <ClInclude Include="超速扣分.h" />
-    <ClInclude Include="载人超载扣分.h" />
+    <ClInclude Include="扣分.h" />
     <ClInclude Include="template.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
