--- a/src/misc/驾考/驾考.vcxproj.filters
+++ b/src/misc/驾考/驾考.vcxproj.filters
@@ -26,10 +26,7 @@
     <ClInclude Include="准驾车型.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="载人超载扣分.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="超速扣分.h">
+    <ClInclude Include="扣分.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
