--- a/src/misc/驾考/驾考.vcxproj.filters
+++ b/src/misc/驾考/驾考.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClInclude Include="扣分.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="处罚.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
